--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,26 @@
 	</tr>
 </table>
 	<div class="commit sansserif">
+    <h2 class="date">8 June 2018</h2>
+      <h3 class="author">hekko4 updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="rscadd">Добавил пианино в бар.</li>
+        <li class="rscadd">Добавил мониторы в машинный отсек и медбей.</li>
+        <li class="maptweak">Переделал отбытие и эвакуационный шаттл.</li>
+        <li class="maptweak">Переделал машинный отсек.</li>
+        <li class="maptweak">Переделал шаттл Syndicate-Commando.</li>
+        <li class="bugfix">Починил все сломанные шаттлы.</li>
+        <li class="bugfix">Починил огромное количество косяков карты, включая различные шлюзы.</li>
+        <li class="bugfix">Починил потолки местами, где они были кривыми. Например, в хранилище (Vault).</li>
+		    <li class="bugfix">Поправил спрайт с космосом в полете, теперь шаттлы не будут лететь задом-наперед.</li>
+      </ul>
+      
+      <h3 class="author">Epicus updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="bugfix">Починил глаза ящерам.</li>
+        <li class="bugfix">Починил дефолтные цвета кожи расам + добавил соответствующие дополнительные языки по дефолту.</li>
+      </ul>
+	  
     <h2 class="date">4 June 2018</h2>
       <h3 class="author">Epicus and Plin updated:</h3>
       <ul class="changes bgimages16">
