--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,13 @@
 	</tr>
 </table>
 	<div class="commit sansserif">
+    <h2 class="date">11 June 2018</h2>
+      <h3 class="author">Epicus updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="tweak">Законы ИИ и обслуживающих дронов изменены под нашу вики.</li>
+        <li class="bugfix">Исправил баг, из-за которого матчмейкинг создавал отношения с ролями, типа магов.</li>
+      </ul>
+
     <h2 class="date">8 June 2018</h2>
       <h3 class="author">hekko4 updated:</h3>
       <ul class="changes bgimages16">
