--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,23 @@
 	</tr>
 </table>
 	<div class="commit sansserif">
+    <h2 class="date">15 June 2018</h2>
+      <h3 class="author">KreeperHLC updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="rscadd">Добавил огромное количество новых предметов для шахтеров.</li>
+        <li class="rscadd">Теперь за руду можно получать очки, которые обмениваются на различные предметы.</li>
+      </ul>
+
+      <h3 class="author">Error777 updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="rscadd">Добавил баны на OOC-чаты.</li>
+      </ul>
+
+      <h3 class="author">NyanCommissar updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="bugfix">Починил отображение аксессуаров на персонажах.</li>
+      </ul>
+
     <h2 class="date">11 June 2018</h2>
       <h3 class="author">Epicus updated:</h3>
       <ul class="changes bgimages16">
