[ci skip] Update Changelog

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -56,6 +56,80 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">20 June 2018</h2>
+			<h3 class="author">Cael_Aislinn updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">Random ore veins should now spawn correctly.</li>
+				<li class="maptweak">Changed mineral spawn % distribution north of Geminus City, changed the sand deposits to dirt</li>
+				<li class="experiment">Mappers can now more easily see the mineral spawn % distribution in the map editor.</li>
+				<li class="wip">Adds NPCs with basic speech interaction system.</li>
+				<li class="wip">Adds NPC traders for ore, hydroponics produce and black market weapons.</li>
+				<li class="imageadd">Adds Mark V Mjolnir Armour and several variants.</li>
+				<li class="tweak">Removes turfs global list to speed up server startup.</li>
+			</ul>
+			<h3 class="author">Desolane updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="bugfix">reduced damage threshold of ODST general attire making them not invincible</li>
+				<li class="tweak">reduced damage threshold of Marine general attire and gave marine armor a holster</li>
+				<li class="spellcheck">fixed a plethora of typos across multiple items</li>
+				<li class="tweak">marine armor vendors now carry gloves</li>
+				<li class="tweak">CH252 Helmet alternate variant is now the CH252-V Helmet and marine uniforms now spawn with dogtags</li>
+			</ul>
+			<h3 class="author">Desolane900 updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">added the modified Insurrectionist DMR</li>
+				<li class="rscadd">adjusted fire rate of the M392 DMR</li>
+			</ul>
+			<h3 class="author">Flaksim updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Adds working comms to UNSC Frigate.</li>
+				<li class="maptweak">Interior remodel of the CCV Slow But Steady.</li>
+				<li class="maptweak">Added drop pod markers where they were missing.</li>
+				<li class="maptweak">Expands Geminus to 3 Z levels.</li>
+				<li class="maptweak">Adds an aditional level to exoresearch, for Orion Project research.</li>
+				<li class="maptweak">Adds comms equipment to innie base, geminus city.</li>
+				<li class="bugfix">Links Listening post Z levels correctly once more.</li>
+				<li class="bugfix">Minor fixes to UNSC Prowler and UNSC Frigate.</li>
+				<li class="maptweak">Remodeled frigate deck 4 to facilitate readding ODST's.</li>
+				<li class="rscdel">Removed ODST spawns on prowler.</li>
+				<li class="rscadd">Added ODST spawns to frigate.</li>
+				<li class="rscadd">Added all First Contact jobs and spawns to colony gamemode.</li>
+				<li class="rscadd">Changed ONI Bridge Officer to ODST Officer.</li>
+				<li class="bugfix">Fixes ODST Officer acces level for colony gamemode.</li>
+				<li class="bugfix">Temporary fix for the way spawns and jobs are handled in colony mode, pending full rework.</li>
+				<li class="maptweak">Remodel of the kig-yar vessel interior.</li>
+				<li class="maptweak">Added a medical bay to the kig-yar vessel.</li>
+				<li class="maptweak">Added 6 deck guns and 2 archer pods to the frigate.</li>
+				<li class="bugfix">Temporarily removed methane den atmosphere pending solid fix for atmos issues.</li>
+				<li class="maptweak">Reworked Kig-Yar engines (369 max thrust baby!)</li>
+				<li class="maptweak">Fixed a small piping error on the UNSC Corvette engines.</li>
+				<li class="maptweak">Made the ID required for the covenant fax easier to find.</li>
+				<li class="maptweak">Replaced the frigate fuel pumps with pumps that are activated on round start (like all other ships have already), removes the bothersome startup procedure and acces problems.</li>
+				<li class="tweak">Updated kig-yar ship icon to reflect recent interior remaps on overmap icon.</li>
+				<li class="tweak">Fixed sloppyness in the spawnpoint override coding for ODST roles.</li>
+				<li class="maptweak">Added an elevator between deck 2 and MAC controls on the frigate.</li>
+				<li class="maptweak">Added a "supraluminal communications array" (fax) to the Kig-Yar bridge.</li>
+				<li class="bugfix">Fixed deck gun and archer gun controls on the frigate.</li>
+				<li class="bugfix">Fixed Kig-Yar vessel engines and connector port for refueling.</li>
+				<li class="experiment">Changed Sangheili language colour to "vox" entry.</li>
+			</ul>
+			<h3 class="author">Ingredients updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Changed Theta Project Armor to a cooler looking armor set.</li>
+				<li class="tweak">Theta armor should be capable of holding most weapons in its suit slot.</li>
+				<li class="tweak">Gave the theta project closet a bullpup rifle and three mags to equip their creation, or be killed by it.</li>
+				<li class="tweak">The armor gives a slight boost to walk speed.</li>
+				<li class="tweak">Theta Undersuit was replaced and now will actually work.</li>
+				<li class="tweak">Slightly Changed Theta Project equipment names so they arn't so long.</li>
+				<li class="tweak">Decreased armor in Theta Arm Guards. Decreased armor from Theta Boots to be more in line with the Arm Guards.</li>
+				<li class="tweak">Made armor thicker on Theta armor to facilitate longer usage time and to offset no shields.</li>
+				<li class="tweak">Added slight armor thickness to Gloves, Boots and undersuit</li>
+				<li class="tweak">Minimum breath pressure halved for augmented lungs. Slightly increased lung max damage because it was formally at the native damage levels</li>
+				<li class="tweak">Added descriptions to all the augmented organs.</li>
+				<li class="experiment">Theta Armor and Theta Helmet given a chance to deflect bullets for no damage.</li>
+				<li class="experiment">Added in the All Purpose Carbine for use with the Theta Project.</li>
+			</ul>
+
 			<h2 class="date">04 June 2018</h2>
 			<h3 class="author">BDpuffy420 updated:</h3>
 			<ul class="changes bgimages16">
