--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,14 +30,14 @@
 	</tr>
 </table>
 	<div class="commit sansserif">
-    <h2 class="date">15 June 2018</h2>
+    <h2 class="date">21 June 2018</h2>
       <h3 class="author">Epicus updated:</h3>
       <ul class="changes bgimages16">
         <li class="rscadd">Добавил джоббан на расы.</li>
         <li class="rscadd">Починил автохисс для рас.</li>
         <li class="tweak">Отключил все вайтлисты - теперь можно свободно играть за любую из трех рас: Таяряне, Унати и Скреллы.</li>
       </ul>
-      <font size='2'><font color=red><b>Внимание!</b></font> Данное обновление вносит расы в игру. Напоминаем, что перед игрой за них, стоит ознакомится с <a href="https://wiki.ss13.ru/index.php?title=Chaotic_Onyx_Backstory">предысторией</a> сервера и конкретным описанием выбранной расы. За персонажей-ксеносов, которые отличаются от людей лишь спрайтом, будем выписывать <b>джоббаны</b> на расы.</font>
+      <font size='2'><font color=red><b>Внимание!</b></font> Данное обновление вносит расы в игру. Напоминаем, что перед игрой за них, стоит ознакомиться с <a href="https://wiki.ss13.ru/index.php?title=Chaotic_Onyx_Backstory">предысторией</a> сервера и конкретным описанием выбранной расы. За персонажей-ксеносов, которые отличаются от людей лишь спрайтом, будем выписывать <b>джоббаны</b> на расы.</font>
 
     <h2 class="date">15 June 2018</h2>
       <h3 class="author">KreeperHLC updated:</h3>
