--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,34 @@
 	</tr>
 </table>
 	<div class="commit sansserif">
+    <h2 class="date">28 June 2018</h2>
+      <h3 class="author">Error777 updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="rscadd">В игру добавлен режим Мемо. В секрете его пока нет, будем тестировать.</li>
+        <li class="bugfix">Починил баг, из-за которого в чате иногда появлялась странная цифра "3".</li>
+        <li class="bugfix">Больше хваталкой научного киборга нельзя дюпать вещи.</li>
+      </ul>
+
+      <h3 class="author">SweetYogurt updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="tweak">Печень перенесена из задницы в туловище.</li>
+        <li class="bugfix">Починил кодировку в карго-консоли.</li>
+      </ul>
+       
+      <h3 class="author">hekko4 updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="maptweak">На карту добавлены шахтерские автоматы.</li>
+        <li class="maptweak">Дедсквад больше не будет телепортироваться на станцию.</li>
+        <li class="bugfix">Различные фиксы потолков, шлюзов зон и прочего.</li>
+        <li class="bugfix">Починил эскейп поды.</li>
+      </ul>
+
+      <h3 class="author">Epicus updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="tweak">Педальные внушения теперь могут выглядеть гораздо интереснее.</li>
+        <li class="tweak">Из режима революция удалены Лоялисты.</li>
+      </ul>
+
     <h2 class="date">21 June 2018</h2>
       <h3 class="author">Epicus updated:</h3>
       <ul class="changes bgimages16">
