--- a/html/changelog.html
+++ b/html/changelog.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
   <title>Список изменений сервера Chaotic Onyx</title>
@@ -29,6 +29,13 @@
 			</td>
 	</tr>
 </table>
+<div class="commit sansserif">
+	<h2 class="date">30.06.2018</h2>
+	<h3 class="author">DeadPhilosof updated:</h3>
+	<ul class="changes bgimages16">
+		<li class="rscadd">Абилки конокрадам добавлены</li>
+	</ul>
+</div>
 	<div class="commit sansserif">
     <h2 class="date">28 June 2018</h2>
       <h3 class="author">Error777 updated:</h3>
