--- a/html/changelog.html
+++ b/html/changelog.html
@@ -29,14 +29,20 @@
 			</td>
 	</tr>
 </table>
-<div class="commit sansserif">
-	<h2 class="date">30.06.2018</h2>
-	<h3 class="author">DeadPhilosof updated:</h3>
-	<ul class="changes bgimages16">
-		<li class="rscadd">Абилки конокрадам добавлены</li>
-	</ul>
-</div>
 	<div class="commit sansserif">
+    <h2 class="date">02 Jule 2018</h2>
+      <h3 class="author">DeadPhilosof updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="rscadd">Генокрадам добавлены новые способности.</li>
+      </ul>
+
+      <h3 class="author">KreeperHLC updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="rscadd">Добавлены новые виды комнатных растений.</li>
+        <li class="tweak">Растения теперь умирают от взрывов, пуль и небрежного отношения к ним.</li>
+        <li class="tweak">Небольшие изменения баланса для нового шахтерского автомата.</li>
+      </ul>
+
     <h2 class="date">28 June 2018</h2>
       <h3 class="author">Error777 updated:</h3>
       <ul class="changes bgimages16">
