--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,32 @@
 	</tr>
 </table>
 	<div class="commit sansserif">
+    <h2 class="date">10 Jule 2018</h2>
+      <h3 class="author">Epicus and NyanCommissar updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="bugfix">Добавлено огромное количество пропавших спрайтов. Наборы спрайтов автоматически сгенерированы скриптом - могут быть косяки.</li>
+      </ul>
+
+      <h3 class="author">hekko4 updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="maptweak">Изменил лабраторию исследователей форона.</li>
+        <li class="maptweak">Добавил комнату отдыха в РнД.</li>
+        <li class="bugfix">Мелкие фиксы карты.</li>
+      </ul>
+
+      <h3 class="author">LagannPM updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="bugfix">В микроволновку теперь можно запихать стак, размером в одну единицу.</li>
+        <li class="bugfix">Починил звук скалки.</li>
+      </ul>
+
+      <h3 class="author">Error777 updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="tweak">Теперь в лоадауте можно выбрать любой цвет кепки.</li>
+        <li class="bugfix">Починил спрайт голема.</li>
+      </ul>
+
+
     <h2 class="date">02 Jule 2018</h2>
       <h3 class="author">DeadPhilosof updated:</h3>
       <ul class="changes bgimages16">
