--- a/html/create_object.html
+++ b/html/create_object.html
@@ -8,7 +8,6 @@
       font-size: 9pt;
       font-family: Verdana, sans-serif;
     }
-
     h1, h2, h3, h4, h5, h6
     {
       color: #00f;
@@ -27,7 +26,7 @@
 	<form name="spawner" action="byond://?src=/* ref src */" method="get">
 		<input type="hidden" name="src" value="/* ref src */">
 		
-		Type <input type="text" name="filter" value="" onkeypress="submitFirst(event)" style="width:280px;height:25"> <input type = "button" value = "Search" onclick = "updateSearch()" /><br>
+		Type <input type="text" name="filter" value="" onkeypress="submitFirst(event)" style="width:350px"> <input type = "button" value = "Search" onclick = "updateSearch()" /><br>
 		Offset: <input type="text" name="offset" value="x,y,z" style="width:250px">
 		
 		A <input type="radio" name="offset_type" value="absolute">
@@ -39,12 +38,13 @@
 		Where: 
 			<select name='object_where' style="width:320px">
 				<option value='onfloor'>On floor below own mob</option>
-				<!-- <option value='inhand'>In own mob's hand</option> -->
+				<option value='inhand'>In own mob's hand</option>
 				<option value='inmarked'>In marked object</option>
+				<option value='dropped'>From the sky on floor below</option>
 			</select>
 		<br><br>
 		<select name="object_list" id="object_list" size="18" multiple style="width:98%"></select><br>
-		<input type="submit" value="spawn">
+		<input type="submit" value="Spawn">
 	</form>
 	
 	<script language="JavaScript">
@@ -54,7 +54,6 @@
 		var objects = object_paths == null ? new Array() : object_paths.split(";");
 		
 		document.spawner.filter.focus();
-		populateList(objects);
 		
 		function populateList(from_list)
 		{
@@ -72,19 +71,12 @@
 		
 		function updateSearch()
 		{
-			if (old_search == document.spawner.filter.value)
-			{
-				return;
-			}
-			
 			old_search = document.spawner.filter.value;
 			
-			
 			var filtered = new Array();
-			var i;
-			for (i in objects)
+			for(var i in objects)
 			{
-				if(objects[i].search(old_search) < 0)
+				if(objects[i].indexOf(old_search) < 0)
 				{
 					continue;
 				}
