--- a/html/changelog.html
+++ b/html/changelog.html
@@ -30,6 +30,38 @@
 	</tr>
 </table>
 	<div class="commit sansserif">
+    <h2 class="date">22 Jule 2018</h2>
+      <h3 class="author">KreeperHLC updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="rscadd">Добавлены новые мобы для астероида: Голиаф, Василиск, Луркер. Будут добавлены на карту в следующих апдейтах.</li>
+        <li class="rscadd">Некоторые мобы теперь умеют стрелять.</li>
+        <li class="rscadd">Обновил интерфейс РнД-консоли. Теперь можно создавать сразу несколько механизмов сразу и фильтровать список по категориям.</li>
+      </ul>
+
+      <h3 class="author">hekko4 updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="rscadd">Добавил в арсенал ионные пистолеты.</li>
+        <li class="rscadd">Заменены энергопистолеты в арсенале, теперь его нужно регистрировать с помощью карточки. Варден, ХоС, Капитан и все те у кого есть доступ к программе "Use Of Force Authorization Manage" могут узнать, где находится оружие, кто является владельцем и соответственно выдавать/забирать доступ к какому-либо режиму у оружия. В будущих обновлениях, вероятно, заменим все тайзеры охраны на энергопистолеты.</li>
+        <li class="maptweak">На нижний уровень возле комнаты с атмосом добавил комнату с телекоммуникационным реле. Теперь оно будет отвечать за работу рации на станции. Не путать с интеркомами. Это временное решение.</li>
+        <li class="maptweak">Добавил в комнату СЕ особую кнопку, которая нужна для поднятия укрепленной двери в комнате с телекоммуникационном реле.</li>
+        <li class="maptweak">Вернул теплообменники в токсины.</li>
+        <li class="maptweak">Исправил отсутствие кнопок у шлюзов снаружи станции.</li>
+        <li class="maptweak">Исправлена зона оружейной, теперь она не привязана к кабинету Вардена.</li>
+        <li class="maptweak">В общежитии больше нельзя укрыться от радиации.</li>
+      </ul>
+
+      <h3 class="author">DeadPhilosof updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="tweak">Армблейд понерфлен: Теперь у активации армблейда есть задержка. Начало активации всем видно.</li>
+        <li class="tweak">Дедстинг улучшен: Теперь спавнит через несколько тиков смертельную дозу цианида. Вы можете успеть что то крикнуть. Доза такова, что вы не умрете сразу.</li>
+        <li class="tweak">Генокрады теперь имеют особенности в строении тела, которые позволяют им выживать в большем количестве экстремальных ситуаций.</li>
+      </ul>
+
+      <h3 class="author">Plin updated:</h3>
+      <ul class="changes bgimages16">
+        <li class="bugfix">Починил force экстренного шаттла.</li>
+      </ul>
+
     <h2 class="date">10 Jule 2018</h2>
       <h3 class="author">Epicus and NyanCommissar updated:</h3>
       <ul class="changes bgimages16">
