Huge changelog update [ci skip]
We really need to automate this

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -56,6 +56,74 @@
 		
 		-->
 		<div class="commit sansserif">
+			<h2 class="date">12 August 2018</h2>
+			<h3 class="author">Cael_Aislinn updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">Places various NPCs around Geminus Colony, the Mining Station and the Innie Base to make them feel lived in. Scattered around are NPC traders who will buy ore or crops for cash, as well as some disguised colonists who are actually black market weapons smugglers.</li>
+			</ul>
+			<h3 class="author">Flaksim updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="rscadd">Added the HRUNTINGYGGDRASIL Mark I ADS Mech</li>
+				<li class="maptweak">Added an upper level to Exoresearch. Improved facility defenses.</li>
+				<li class="maptweak">Added a mech lab and testing site to Exoresearch.</li>
+				<li class="maptweak">Repurposed Listening Post with a URF facility</li>
+				<li class="maptweak">Removed Outer Colony from map rotation.</li>
+				<li class="bugfix">Fixes minor mapping errors on various maps.</li>
+				<li class="bugfix">Fixes Fuel Depot Elevator.</li>
+				<li class="rscadd">Added ODST Donator Variants.</li>
+				<li class="maptweak">Fixed gravity and power issues on Geminus (Someone forgot areas when mapping new things in...)</li>
+				<li class="rscdel">Cleaned up map folders to get rid of outdated and horribly broken maps.</li>
+				<li class="bugfix">Implemented XO-11's movement fix.</li>
+				<li class="tweak">Rounded out items here and there, nothing major, this update is mostly fixing little things and step 1 in src reorganization.</li>
+			</ul>
+			<h3 class="author">Ingredients updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="tweak">Changed Colossus and Zeal armor Stats to prevent speed boost while not wearing armor. Gave Zeal armor half normal armor thickness so it can it will be more useful when under bullet fire.</li>
+				<li class="tweak">Fixed a few typos I saw in descriptions.</li>
+				<li class="tweak">Added in Chem and Tracking Implant and Implanter into freezer. Added in pinpointers to use with tracker Implant.</li>
+				<li class="tweak">Updated Project Orion Envelope with details for new map. Added in Orion Code envelope to the corvette as well just in case it is used in game.</li>
+				<li class="tweak">Updated Orion Armor Descriptions as they mentioned the Theta Project in them.</li>
+				<li class="tweak">Added in an Autopsy scanner to the Morgue of Exo3.</li>
+				<li class="tweak">Removed Deconstructer and Circuit printer from Exo3. No point in having duplicates. Replaced with Some extra ammo boxes and more tables. Added in monkey cubes for live fire test subjects.</li>
+				<li class="tweak">Added in some vials for use with the Isolation machine.</li>
+				<li class="imageadd">New floorsigns for medical.</li>
+				<li class="tweak">Changed Theta project names to Project Orion for guns and armor.Removed Code to deflect bullets from armor and helmet as it wasn't working. Added in code for all Theta Armor to species restrict armor.</li>
+				<li class="tweak">Armor thickness is now only on helmet and armor pieces. Undersuit no longer provides armor values.</li>
+				<li class="tweak">Added in Orion Project Race called Orion which Admins will have to manually set once proper RP is done ICly to create project Orion. Added in armor race restrictions so it can only be worn once race is set by an admin.</li>
+				<li class="imageadd">Added a modded Icon, MA9 gun into Weapon sprites.dm, changed the Orion Project Icon gun to use the MA9. Changed weight class from huge to large.</li>
+				<li class="maptweak">Added in Chemistry station to Exo3.</li>
+				<li class="maptweak">Removed random project theta Labratory hidden in rocks of Exo-research 2. Removed old project theta lab in Gem City RnD</li>
+				<li class="tweak">Fixed Orion Species Path so they can now wear their armor properly.</li>
+				<li class="tweak">Deleted three spare undersuits in orion closets as they were redundant.</li>
+				<li class="tweak">Changed the name of the Colossus Case to help it blend in better while holding it. Changed wrong code to make it so it can only hold colossus armor inside.</li>
+				<li class="tweak">Removed custom attack code for Orions.</li>
+				<li class="tweak">Added in Orion Datum so admins can easily change the race in game</li>
+				<li class="tweak">Slightly improved Orion unarmed damage and block factor</li>
+				<li class="tweak">Orion race buffs give 20 additional hp, slight pain tolerance, and temperature tolerance.</li>
+				<li class="tweak">Replaced dufflebags with normal ODST backpacks for the time being as the previous ones were not usable.</li>
+				<li class="tweak">Added in a few medical storage belts in chem storage in exoresearch3.</li>
+				<li class="tweak">Replaced pinpointers with GPS for tracking implants.</li>
+				<li class="tweak">Added in three cash briefcases for Oni to use to procure additional materials for labs.</li>
+				<li class="tweak">Added in random clothes sets on Innie ship. Some random materials as well.</li>
+				<li class="tweak">Random weapon and ammo spawns were added in as well to the innie ship.</li>
+				<li class="tweak">A few static goodies were spread around the ship as well.</li>
+				<li class="tweak">Added in two new types of armors, the Colossus Armor and the Zeal Scout Suit. Made a case which can carry the colossus armor.</li>
+				<li class="maptweak">Added in a new room to house the two new armor types.</li>
+				<li class="tweak">Added in random clothes sets in Innibase3 Laundry room and Eastern Storage.</li>
+				<li class="tweak">Added in a small assortment of old guns with a bit of ammo into the ammo crates Inniebase3 north storage. Added in a few sets of armor vests.</li>
+				<li class="tweak">Added in randomised misc items to Eastern and Northern Storage in Inniebase2. Should help with blending in with civies if they want to go incognito. Added in a emergency rations freezer as well.</li>
+				<li class="tweak">Added in a few old style guns to the weapons crates in Northern Storage Inniebase2.</li>
+				<li class="tweak">Added in some merc armor and helmets into northern Storage Inniebase2.</li>
+				<li class="tweak">Added in a secure briefcase with money inside of it in the hidden office in eastern maint in Inniebase2. Also added in a case of cigars.</li>
+				<li class="tweak">Added barricades over the grills on Inniebase1 to make it more difficult to enter through vents.</li>
+			</ul>
+			<h3 class="author">bloxgate updated:</h3>
+			<ul class="changes bgimages16">
+				<li class="maptweak">The Kig-Yar Ship has a shield generator in Engineering</li>
+				<li class="experiment">The Kig-Yar ship is now powered by a Subspace-Fractal reactor. Its power output is limited to a max of 1MW</li>
+				<li class="bugfix">Incoming fire now spawns outside the Kig-Yar ship</li>
+			</ul>
+
 			<h2 class="date">20 June 2018</h2>
 			<h3 class="author">Cael_Aislinn updated:</h3>
 			<ul class="changes bgimages16">
